more README edits; fix to convert.rb script

--- a/source/css/web.css
+++ b/source/css/web.css
@@ -361,6 +361,7 @@ h2 {
   font-size: 1.5rem;
   font-weight: 500;
   font-style: italic;
+  column-break-before: always;
   break-before: column;
 }
 
