--- a/source/css/web.css
+++ b/source/css/web.css
@@ -77,6 +77,14 @@
   --page-count: 1;
 }
 
+@media(prefers-color-scheme:dark) {
+  :root {
+    --paper-lightness: 1%;
+    --selection-color: hsla(340, 100%, 25%, 1.0);
+    --text-color: rgb(250, 250, 250);
+  }
+}
+
 ::-moz-selection { background: var(--selection-color); }
 ::selection { background: var(--selection-color); }
 
@@ -160,15 +168,17 @@ button.toc-button {
 
   border: 1px solid var(--text-color);
   background-color: var(--paper-color);
+  color: inherit;
   transform: translateX(-50%) translateY(-50%);
 }
 
 button.toc-button:hover {
   border: 1px solid var(--spot-color);
-  fill: var(--spot-color);
+  color: var(--spot-color);
 }
 
 button.toc-button svg {
+  fill: currentColor;
   flex-grow: 1;
 }
 
