--- a/source/css/web.css
+++ b/source/css/web.css
@@ -51,6 +51,8 @@
 :root {
   --base-unit-half: calc( var(--base-unit) / 2.0 );
 
+  --body-text-font-stack: "Vollkorn", serif;
+  --heading-text-font-stack: "Vollkorn", serif;
   --font-size: var(--base-unit-half);
   --line-height: 1.4rem;
   --print-line-height: 1.4rem;
@@ -122,7 +124,7 @@ body {
   line-height: var(--line-height);
 
   color: var(--text-color);
-  font-family: "Vollkorn", serif;
+  font-family: var(--body-text-font-stack);
   font-size: 1rem;
   font-weight: 400;
 }
@@ -145,6 +147,8 @@ div.tutorial h2 {
   flex-grow: 0;
   margin-top: 0;
   margin-bottom: var(--line-height);
+
+  font-family: var(--body-text-font-stack); /* a bit ugly */
 }
 
 div.tutorial p {
@@ -342,6 +346,8 @@ h2 {
   margin: calc( var(--line-height) * 6.0 ) 0 calc( var(--line-height) * 2.0 ) 0;
   padding: 0;
   line-height: calc( var(--line-height) * 2.0 );
+
+  font-family: var(--heading-text-font-stack);
   font-size: 1.5rem;
   font-weight: 500;
   font-style: italic;
@@ -466,6 +472,7 @@ div.book div.title h1 {
   text-transform: lowercase;
   line-height: calc( var(--line-height) * 2.0 );
 
+  font-family: var(--heading-text-font-stack);
   font-size: 2rem;
   font-weight: 500;
   font-variant: small-caps;
@@ -492,6 +499,7 @@ div.book h1 {
   text-transform: lowercase;
   line-height: var(--column-height);
 
+  font-family: var(--heading-text-font-stack);
   font-size: 2rem;
   font-weight: 500;
   font-variant: small-caps;
@@ -610,6 +618,7 @@ div.print-cover div.title h1 {
   text-transform: lowercase;
   line-height: calc( var(--line-height) * 2.0 );
 
+  font-family: var(--heading-text-font-stack);
   font-size: 2rem;
   font-weight: 500;
   font-variant:small-caps;
@@ -743,6 +752,7 @@ div.print-cover div.title h2 {
     margin-top: 0;
     margin-bottom: var(--print-line-height);
     line-height: var(--print-line-height);
+
     font-size: 1rem;
 
     /* this isn't working :( */
