Color change on close button hover

--- a/source/css/web.css
+++ b/source/css/web.css
@@ -246,6 +246,7 @@ nav div.close-button {
 
 nav div.close-button:hover {
   cursor: pointer;
+  stroke: var(--text-color);
 }
 
 nav div.controls {
